--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -4,14 +4,31 @@
   </span>
   <!-- This fills the remaining space of the current row -->
   <span class="fill-space"></span>
-  <div class="button-row">
-    <button mat-button (click)="viewUserRequests()">My Requests</button>
-    <button *ngIf="isManager" mat-button (click)="viewAdminRequests()">User Requests</button>
-    <button *ngIf="isRRHH" mat-button (click)="viewHRRequests()">Approved Requests</button>
+  <div class="button-row sm-hidden-value">
+    <button type="button"  mat-button (click)="viewUserRequests()">My Requests</button>
+    <button type="button" *ngIf="isManager" mat-button (click)="viewAdminRequests()">User Requests</button>
+    <button type="button" *ngIf="isRRHH" mat-button (click)="viewHRRequests()">Approved Requests</button>
     <!-- 
       <button mat-icon-button (click)="viewCalendar()">
         <mat-icon  matBadge="22" matBadgeColor="warn">event</mat-icon>
       </button>
       -->
   </div>
+  <div class="button-row sm-show-value">
+      <button mat-icon-button [matMenuTriggerFor]="menu">
+          <mat-icon>menu</mat-icon>
+        </button>
+        <mat-menu #menu="matMenu">
+          <button mat-menu-item>
+            <span (click)="viewUserRequests()" >My Requests</span>
+          </button>
+          <button mat-menu-item *ngIf="isManager">
+            <span (click)="viewAdminRequests()" >User Requests</span>
+          </button>
+          <button mat-menu-item *ngIf="isRRHH">
+            <span (click)="viewHRRequests()" >Approved Requests</span>
+          </button>
+        </mat-menu>
+  </div>
+
 </mat-toolbar>
