--- a/src/app/user-view/user-view.component.html
+++ b/src/app/user-view/user-view.component.html
@@ -1,73 +1,82 @@
 <div class="relative-container">
-  <button mat-fab color="primary" class="floating-add-button" (click)="goToNewRequest()">
+  <button mat-fab type="button" color="primary" class="floating-add-button" (click)="goToNewRequest()">
     <mat-icon>add</mat-icon>
   </button>
 
-  <!-- <mat-paginator [length]="resultsLength" [pageSize]="20"></mat-paginator> -->
-  <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8" multiTemplateDataRows>
+  <div class="scroll-table">
+    <!-- <mat-paginator [length]="resultsLength" [pageSize]="20"></mat-paginator> -->
+    <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8" multiTemplateDataRows>
 
-    <!-- ID Column -->
-    <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Id. </th>
-      <td mat-cell *matCellDef="let element">{{element.Id}}</td>
-    </ng-container>
+      <!-- ID Column
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Id. </th>
+        <td mat-cell *matCellDef="let element">{{element.Id}}</td>
+      </ng-container>
+       -->
 
-    <!-- Creation Date Column 
+      <!-- Creation Date Column 
     <ng-container matColumnDef="fechaCreacion">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Creation Date </th>
       <td mat-cell *matCellDef="let element">{{element.fechaCreacion | date }}</td>
     </ng-container>
     -->
+      <!-- Type  -->
 
-    <!-- Start Date Column -->
-    <ng-container matColumnDef="fechaInicio">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Start Date </th>
-      <td mat-cell *matCellDef="let element">{{element.PACDateFrom | date}}</td>
-    </ng-container>
+      <ng-container matColumnDef="type">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Type </th>
+        <td mat-cell *matCellDef="let element">{{element.PACRequestType }}</td>
+      </ng-container>
 
-    <!-- Start Date Column -->
-    <ng-container matColumnDef="horaInicio">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Start Hour </th>
-      <td mat-cell *matCellDef="let element">{{element.PACHourFrom}}</td>
-    </ng-container>
+      <!-- Start Date Column -->
+      <ng-container matColumnDef="fechaInicio">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header class="sm-hidden-value"> Start Date </th>
+        <td mat-cell *matCellDef="let element" class="sm-hidden-value">{{element.PACDateFrom | date}}</td>
+      </ng-container>
 
-    <!-- Finish Date Column -->
-    <ng-container matColumnDef="fechaFin">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Finish Date </th>
-      <td mat-cell *matCellDef="let element">{{element.PACDateTo | date}}</td>
-    </ng-container>
+      <!-- Start Date Column -->
+      <ng-container matColumnDef="horaInicio">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header class="sm-hidden-value"> Start Hour </th>
+        <td mat-cell *matCellDef="let element" class="sm-hidden-value">{{element.PACHourFrom}}</td>
+      </ng-container>
 
-    <!-- Finish Date Column -->
-    <ng-container matColumnDef="horaFin">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Finish Hour </th>
-      <td mat-cell *matCellDef="let element">{{element.PACHourTo}}</td>
-    </ng-container>
+      <!-- Finish Date Column -->
+      <ng-container matColumnDef="fechaFin">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header class="sm-hidden-value"> Finish Date </th>
+        <td mat-cell *matCellDef="let element" class="sm-hidden-value">{{element.PACDateTo | date}}</td>
+      </ng-container>
 
-    <!-- Finish Date Column -->
-    <ng-container matColumnDef="estado">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
-      <td mat-cell *matCellDef="let element">{{element.PACRequestStatus}}</td>
-    </ng-container>
+      <!-- Finish Date Column -->
+      <ng-container matColumnDef="horaFin">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header class="sm-hidden-value"> Finish Hour </th>
+        <td mat-cell *matCellDef="let element" class="sm-hidden-value">{{element.PACHourTo}}</td>
+      </ng-container>
+
+      <!-- Finish Date Column -->
+      <ng-container matColumnDef="estado">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
+        <td mat-cell *matCellDef="let element">{{element.PACRequestStatus}}</td>
+      </ng-container>
 
 
-    <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
-    <ng-container matColumnDef="expandedDetail">
-      <td mat-cell *matCellDef="let element" [attr.colspan]="displayedColumns.length">
-        <div class="expanded-element-detail" [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
+      <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
+      <ng-container matColumnDef="expandedDetail">
+        <td mat-cell *matCellDef="let element" [attr.colspan]="displayedColumns.length">
+          <div class="expanded-element-detail" [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
 
-          <div class="border-info">
-            <app-request-view [request]="element">
+            <div class="border-info">
+              <app-request-view [request]="element">
 
-            </app-request-view>
+              </app-request-view>
+            </div>
           </div>
-        </div>
-      </td>
-    </ng-container>
+        </td>
+      </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let element; columns: displayedColumns;" class="element-row" [class.example-expanded-row]="expandedElement === element"
-      (click)="clickedRow(element) ">
-    </tr>
-    <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="detail-row"></tr>
-  </table>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let element; columns: displayedColumns;" class="element-row" [class.example-expanded-row]="expandedElement === element"
+        (click)="clickedRow(element) ">
+      </tr>
+      <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="detail-row"></tr>
+    </table>
+  </div>
 </div>
