--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+
 @import '~@angular/material/prebuilt-themes/indigo-pink.css';
 
 body {
@@ -46,6 +47,9 @@ table {
   
   .card-container {
     margin: 5px;
+  }
+
+  .center-data {
     text-align: center;
   }
   
@@ -58,6 +62,32 @@ table {
   .full-width {
     width: 100%;
   }
+
+  .sm-show-value {
+    display: none;
+  }
   
+@media(max-width: 600px) {
+  .scroll-table {
+      /* overflow-x: auto !important; */
+  }
+  .sm-hidden-value {
+    display: none;
+  }
+  .sm-show-value {
+    display: inherit;
+  }
+
+  .element-row {
+    padding-right: 1px;
+  }
+
+  .btn-group {
+    text-align: center;
+  }
+  .mat-raised-button {
+    width: 100%;
+  }
+}
   
   
