changes in views, bugfixes

--- a/src/app/human-resources-view/final-report-view/final-report-view.component.html
+++ b/src/app/human-resources-view/final-report-view/final-report-view.component.html
@@ -1,6 +1,6 @@
 <app-request-view [request]="request">
 </app-request-view>
-<table class="mat-table">
+<!-- <table class="mat-table">
   <tbody>
     <tr class="mat-header-row ">
       <th class="mat-header-cell" role="columnheader"> Response </th>
@@ -10,6 +10,7 @@
     </tr>
   </tbody>
 </table>
+-->
 <mat-card class="card-container center-data">
   <mat-card-title>
     Response
