--- a/src/app/user-view/user-view.component.html
+++ b/src/app/user-view/user-view.component.html
@@ -22,37 +22,37 @@
     -->
       <!-- Type  -->
 
-      <ng-container matColumnDef="type">
+      <ng-container matColumnDef="PACRequestType">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Type </th>
         <td mat-cell *matCellDef="let element">{{element.PACRequestType }}</td>
       </ng-container>
 
       <!-- Start Date Column -->
-      <ng-container matColumnDef="fechaInicio">
+      <ng-container matColumnDef="PACDateFrom">
         <th mat-header-cell *matHeaderCellDef mat-sort-header class="sm-hidden-value"> Start Date </th>
         <td mat-cell *matCellDef="let element" class="sm-hidden-value">{{element.PACDateFrom | date}}</td>
       </ng-container>
 
       <!-- Start Date Column -->
-      <ng-container matColumnDef="horaInicio">
+      <ng-container matColumnDef="PACHourFrom">
         <th mat-header-cell *matHeaderCellDef mat-sort-header class="sm-hidden-value"> Start Hour </th>
         <td mat-cell *matCellDef="let element" class="sm-hidden-value">{{element.PACHourFrom}}</td>
       </ng-container>
 
       <!-- Finish Date Column -->
-      <ng-container matColumnDef="fechaFin">
+      <ng-container matColumnDef="PACDateTo">
         <th mat-header-cell *matHeaderCellDef mat-sort-header class="sm-hidden-value"> Finish Date </th>
         <td mat-cell *matCellDef="let element" class="sm-hidden-value">{{element.PACDateTo | date}}</td>
       </ng-container>
 
       <!-- Finish Date Column -->
-      <ng-container matColumnDef="horaFin">
+      <ng-container matColumnDef="PACHourTo">
         <th mat-header-cell *matHeaderCellDef mat-sort-header class="sm-hidden-value"> Finish Hour </th>
         <td mat-cell *matCellDef="let element" class="sm-hidden-value">{{element.PACHourTo}}</td>
       </ng-container>
 
       <!-- Finish Date Column -->
-      <ng-container matColumnDef="estado">
+      <ng-container matColumnDef="PACRequestStatus">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
         <td mat-cell *matCellDef="let element">{{element.PACRequestStatus}}</td>
       </ng-container>
